# crddagt_cpp

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
cmake/toolchains/: gcc-auto.cmake
src/: CMakeLists.txt  main.cpp
src/crddagt/common/: common.cpp  common.hpp  exported_graph.hpp  graph_builder.cpp  graph_builder.hpp  graph_core.cpp  graph_core.hpp  graph_core_diagnostics.hpp  graph_core_enums.hpp  graph_core_exceptions.hpp  graph_items.hpp  iterable_union_find.fwd.hpp  iterable_union_find.hpp  iterable_union_find.inline.hpp  opaque_ptr_key.hpp  opk_unique_list.hpp  unique_shared_weak_list.hpp  vardata.hpp  vardata.inline.hpp
src/crddagt/execution/: executable_graph.hpp  execution_result.hpp  executor.cpp  executor.hpp  single_threaded_executor.cpp  single_threaded_executor.hpp  task_wrapper.cpp  task_wrapper.hpp
tests/: CMakeLists.txt
tests/common/: graph_core_diagnostics_tests.cpp  iterable_union_find_tests.cpp  opaque_ptr_key_tests.cpp  opk_unique_list_tests.cpp  unique_shared_weak_list_tests.cpp  vardata_tests.cpp
tests/execution/: execution_tests.cpp
tests/placeholder/: placeholder_tests.cpp
thoughts/: 2026-01-05_100253_reviewing_the_agents_markdown_file.md  2026-01-05_122331_tg_assert_debate.md  2026-01-08_094948_graph_core_design.md  2026-01-08_180853_eager_cycle_detection_research.md  2026-01-08_185125_eager_cycle_detection_snippets.md  2026-01-08_202059_iterable_union_find_design.md  2026-01-09_153426_missing_create_seal_sensitivity.md  2026-01-09_155955_orphan_field_conceptual_error.md  2026-01-10_065043_diagnostic_revamp_mikado_plan.md  2026-01-10_071521_dangers_of_invalid_graph_instantiation.md  2026-01-10_095727_deferred_validation_improvements.md  2026-01-12_153125_thoughts_on_agentic_coding_context_window_thresholds.md  2026-01-12_153125_thoughts_on_agentic_coding_rag_vs_human_memory.md  2026-01-12_153125_thoughts_on_agentic_coding_swarms_vs_human_teams.md  2026-01-12_203411_task_execution_roadmap.md  2026-01-12_215134_design_defects_and_pitfalls.md  2026-01-13_095409_execution_interaction_graph_level.md  2026-01-13_095410_execution_interaction_step_level.md  2026-01-13_095411_execution_interaction_data_flow.md  2026-01-13_101343_execution_interaction_graph_level_mermaid.md  2026-01-13_102934_task_wrapper_design.md  2026-01-13_172752_task_graph_specification.md
thoughts/philosophical/thoughts_on_agentic_coding/: 2026-01-12_153125_thoughts_on_agentic_coding_verbosity_and_documentation.md
